--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,26 +3,35 @@ body {
     font-family: arial, helvetica, sans-serif;
     margin: 0;
   }
+/* Header styling */
 h1 {
-    color: #F0F8FF;
-    font-size: 50px;
-    font-family: timenewroman;
-    text-align: center;
-    height: 50px;
-    background-image: linear-gradient(rgb(44, 44, 78), gray);
-    text-transform: uppercase;
-  }
-  .text-uppercase {
-      text-transform: uppercase;
-  }  
-/* Navigation bar styling */
+  text-align: center;
+  overflow: hidden;
+  background-color:#000;
+  padding: 20px 10px;
+}
+h1 {
+  position: relative;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 24px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+.header a:hover {
+  background-color:#000;
+  color: silver;
+
+}
+  /* Navigation bar styling */
 .navbar {
+    text-align: center;
     font-size: large;
-    font-weight: 800;
+    font-weight: 700;
     background-color:#000;
     color: #f1f1f1;
-  }
-  .navbar, ul li {
+}
+.navbar, ul li {
     float: none;
-  }
+}
    
