--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,64 @@
 /* Body styling */
 body {
+    color: black;
     font-family: arial, helvetica, sans-serif;
     margin: 0;
   }
-/* Header styling */
-h1 {
+/* Header/logo Title */
+.header {
+  padding: 80px;
   text-align: center;
-  overflow: hidden;
-  background-color:#000;
-  padding: 20px 10px;
+  background: #f1f1f1;
+  color: goldenrod;
 }
-h1 {
-  position: relative;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 24px; 
-  line-height: 25px;
-  border-radius: 4px;
+.header h1 {
+  font-size: 40px;
+}  
+/* Media querie */
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
 }
-.header a:hover {
-  background-color:#000;
-  color: silver;
-
+/* For tablets: */
+@media only screen and (min-width: 600px){
+.col-s-1 {width: 8.33%;}
+.col-s-2 {width: 16.66%;}
+.col-s-3 {width: 25%;}
+.col-s-4 {width: 33.33%;}
+.col-s-5 {width: 41.66%;}
+.col-s-6 {width: 50%;}
+.col-s-7 {width: 58.33%;}
+.col-s-8 {width: 66.66%;}
+.col-s-9 {width: 75%;}
+.col-s-10 {width: 83.33%;}
+.col-s-11 {width: 91.66%;}
+.col-s-12 {width: 100%;}
+}
+/* For desktop: */
+@media only screen and (min-width: 768px){
+.col-s-1 {width: 8.33%;}
+.col-s-2 {width: 16.66%;}
+.col-s-3 {width: 25%;}
+.col-s-4 {width: 33.33%;}
+.col-s-5 {width: 41.66%;}
+.col-s-6 {width: 50%;}
+.col-s-7 {width: 58.33%;}
+.col-s-8 {width: 66.66%;}
+.col-s-9 {width: 75%;}
+.col-s-10 {width: 83.33%;}
+.col-s-11 {width: 91.66%;}
+.col-s-12 {width: 100%;}    
+}  
+/* Header styling */
+.myHeader {
+  text-align: center;
+  font-size: 40px;
+  font-family: couriernew;
+  color:green;
+}
+.myHeader a {
+  text-align: center;
+  
 }
   /* Navigation bar styling */
 .navbar {
@@ -33,5 +70,43 @@ h1 {
 }
 .navbar, ul li {
     float: none;
+}
+* {
+  box-sizing: border-box;
+}
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color:crimson;
+}
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
 }
    
