--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,21 @@ body {
     font-family: arial, helvetica, sans-serif;
     margin: 0;
   }
-/* Header/logo Title */
-.header {
-  padding: 80px;
-  text-align: center;
-  background: #f1f1f1;
-  color: goldenrod;
+/* Our home page hero image */
+/* Image and Its copyright belongs to Twenty One Pilot via https://tumblr.com/ */
+.hero-image {
+  background: url("https://cdn.pixabay.com/photo/2017/01/16/15/28/boxer-1984344_1280.jpg") no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  position: relative;
 }
-.header h1 {
-  font-size: 40px;
-}  
+.hero-text {
+  color: goldenrod;  
+  text-align: center;
+  font-size: 6em;
+}
+
 /* Media querie */
 /* For mobile phones: */
 [class*="col-"] {
@@ -101,7 +106,46 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color:crimson;
+  background-color:aliceblue;
+  cursor: pointer;
+}
+.button {
+  border-radius: 4px;
+  background-color: #111;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.card .button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 /* Footer */
 .footer {
@@ -109,4 +153,77 @@ body {
   text-align: center;
   background: #ddd;
 }
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  background: #f1f1f1f1;
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 80px;
+  text-align: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+}
+
+/* The dot/bullet/indicator container */
+.dot-container {
+    text-align: center;
+    padding: 20px;
+    background: white;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: rgb(199, 207, 199);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+/* Add a background color to the active dot/circle */
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Add an italic font style to all quotes */
+q {font-style: italic;}
+
+/* Add a blue color to the author */
+.author {color:#111;}
    
