--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 /* Body styling */
 body {
-    color: black;
-    font-family: arial, helvetica, sans-serif;
-    margin: 0;
-  }
+  color: black;
+  font-family: arial, helvetica, sans-serif;
+  margin: 0;
+  background: #000;
+}
+/* Navigation bar styling */
 /* Our home page hero image */
 /* Image and Its copyright belongs to Twenty One Pilot via https://tumblr.com/ */
 .hero-image {
@@ -16,13 +18,17 @@ body {
 .hero-text {
   color: goldenrod;  
   text-align: center;
+  letter-spacing: 3px;
   font-size: 6em;
 }
+.list-group {
+  border: 2px;
 
+}
 /* Media querie */
 /* For mobile phones: */
 [class*="col-"] {
-  width: 100%;
+width: 100%;
 }
 /* For tablets: */
 @media only screen and (min-width: 600px){
@@ -56,169 +62,169 @@ body {
 }  
 /* Header styling */
 .myHeader {
-  text-align: center;
-  font-size: 40px;
-  font-family: couriernew;
-  color:green;
+text-align: center;
+font-size: 40px;
+font-family: couriernew;
+color:green;
 }
 .myHeader a {
-  text-align: center;
-  
+text-align: center;
+
 }
-  /* Navigation bar styling */
+/* Navigation bar styling */
 .navbar {
-    text-align: center;
-    font-size: large;
-    font-weight: 700;
-    background-color:#000;
-    color: #f1f1f1;
+  text-align: center;
+  font-size: large;
+  font-weight: 700;
+  background-color:#000;
+  color: #f1f1f1;
 }
 .navbar, ul li {
-    float: none;
+  float: none;
 }
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
 /* Float four columns side by side */
 .column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
+float: left;
+width: 25%;
+padding: 0 10px;
 }
 /* Remove extra left and right margins, due to padding */
 .row {margin: 0 -5px;}
 /* Clear floats after the columns */
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
+content: "";
+display: table;
+clear: both;
 }
 /* Responsive columns */
 @media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
+.column {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+}
 }
 /* Style the counter cards */
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  text-align: center;
-  background-color:aliceblue;
-  cursor: pointer;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+padding: 16px;
+text-align: center;
+background-color:aliceblue;
+cursor: pointer;
 }
 .button {
-  border-radius: 4px;
-  background-color: #111;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
+border-radius: 4px;
+background-color: #111;
+border: none;
+color: #FFFFFF;
+text-align: center;
+font-size: 28px;
+padding: 20px;
+width: 200px;
+transition: all 0.5s;
+cursor: pointer;
+margin: 5px;
 }
 
 .card .button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
+cursor: pointer;
+display: inline-block;
+position: relative;
+transition: 0.5s;
 }
 
 .button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+content: '\00bb';
+position: absolute;
+opacity: 0;
+top: 0;
+right: -20px;
+transition: 0.5s;
 }
 
 .button:hover span {
-  padding-right: 25px;
+padding-right: 25px;
 }
 
 .button:hover span:after {
-  opacity: 1;
-  right: 0;
+opacity: 1;
+right: 0;
 }
 /* Footer */
 .footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
+padding: 20px;
+text-align: center;
+background: #ddd;
 }
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 
 /* Slideshow container */
 .slideshow-container {
-  position: relative;
-  background: #f1f1f1f1;
+position: relative;
+background: #f1f1f1f1;
 }
 
 /* Slides */
 .mySlides {
-  display: none;
-  padding: 80px;
-  text-align: center;
+display: none;
+padding: 80px;
+text-align: center;
 }
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #888;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+margin-top: -30px;
+padding: 16px;
+color: #888;
+font-weight: bold;
+font-size: 20px;
+border-radius: 0 3px 3px 0;
+user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
+position: absolute;
+right: 0;
+border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+background-color: rgba(0,0,0,0.8);
+color: white;
 }
 
 /* The dot/bullet/indicator container */
 .dot-container {
-    text-align: center;
-    padding: 20px;
-    background: white;
+  text-align: center;
+  padding: 20px;
+  background: white;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: rgb(199, 207, 199);
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: rgb(199, 207, 199);
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
 }
 
 /* Add a background color to the active dot/circle */
 .active, .dot:hover {
-  background-color: #717171;
+background-color: #717171;
 }
 
 /* Add an italic font style to all quotes */
@@ -226,4 +232,3 @@ q {font-style: italic;}
 
 /* Add a blue color to the author */
 .author {color:#111;}
-   
