--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,37 @@ body {
   color: black;
   font-family: arial, helvetica, sans-serif;
   margin: 0;
-  background: #000;
+  background: #FFFFFF;
+}
+/* Header styling */
+.header {
+  overflow: hidden;
+  background-color:#000;
+  padding: 20px 10px;
+}
+.header a {
+  position: relative;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 24px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+.header a:hover {
+  background-color:#000;
+  color: silver;
+
+}
+/* Navigation bar styling */
+.navbar ul li a {
+  text-align: center;
+  font-size: medium;
+  font-weight: 700;
+  background-color:#FFFFFF;
+  color: #000;
+}
+.navbar, ul li {
+  float: none;
 }
 /* Navigation bar styling */
 /* Our home page hero image */
@@ -14,16 +44,6 @@ body {
   width: 100%;
   height: 500px;
   position: relative;
-}
-.hero-text {
-  color: goldenrod;  
-  text-align: center;
-  letter-spacing: 3px;
-  font-size: 6em;
-}
-.list-group {
-  border: 2px;
-
 }
 /* Media querie */
 /* For mobile phones: */
@@ -59,28 +79,16 @@ width: 100%;
 .col-s-10 {width: 83.33%;}
 .col-s-11 {width: 91.66%;}
 .col-s-12 {width: 100%;}    
-}  
-/* Header styling */
-.myHeader {
-text-align: center;
-font-size: 40px;
-font-family: couriernew;
-color:green;
 }
-.myHeader a {
-text-align: center;
-
-}
-/* Navigation bar styling */
-.navbar {
+.list-group-item {
+  border: 1px solid #bbb; /* Green border */
+  background-color: #000; /* background */
   text-align: center;
-  font-size: large;
-  font-weight: 700;
-  background-color:#000;
-  color: #f1f1f1;
-}
-.navbar, ul li {
-  float: none;
+  font-size: larger;
+  color: #000; /* White text */
+  cursor: pointer; /* Pointer/hand icon */
+  display: block; /* Make the buttons appear below each other */
+
 }
 * {
 box-sizing: border-box;
