I added some css style to the changes I made and also to fit the map api

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,177 @@ body {
 .navbar, ul li {
   float: none;
 }
+/* Hero image */
+/* Image was linked from: https://www.cntraveller.com/article/amber-list-countries */
+.hero-image {
+  background: url("https://tr-images.condecdn.net/image/bGlEbAPOBzA/crop/1440/f/fig-tree-bay-cyprus-gettyimages-1070188472.jpg") no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+/* Hero image text styling */
+.hero-text {  
+  text-align: center;
+  font-size: 8em;
+  position: relative;
+}
+.btn {
+  background-color: #f1f1f1;
+  border: 1px solid silver;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+.list-group-item {
+  border: 1px solid #bbb; /* Green border */
+  background-color: #000; /* background */
+  text-align: center;
+  font-size: larger;
+  color: #f1f1f1; /* White text */
+  cursor: pointer; /* Pointer/hand icon */
+  display: block; /* Make the buttons appear below each other */
+
+}
+div#map {min-height: 360px;
+}
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
+/* Media querie */
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+/* For tablets: */
+@media only screen and (min-width: 600px){
+.col-s-1 {width: 8.33%;}
+.col-s-2 {width: 16.66%;}
+.col-s-3 {width: 25%;}
+.col-s-4 {width: 33.33%;}
+.col-s-5 {width: 41.66%;}
+.col-s-6 {width: 50%;}
+.col-s-7 {width: 58.33%;}
+.col-s-8 {width: 66.66%;}
+.col-s-9 {width: 75%;}
+.col-s-10 {width: 83.33%;}
+.col-s-11 {width: 91.66%;}
+.col-s-12 {width: 100%;}
+}
+/* For desktop: */
+@media only screen and (min-width: 768px){
+.col-s-1 {width: 8.33%;}
+.col-s-2 {width: 16.66%;}
+.col-s-3 {width: 25%;}
+.col-s-4 {width: 33.33%;}
+.col-s-5 {width: 41.66%;}
+.col-s-6 {width: 50%;}
+.col-s-7 {width: 58.33%;}
+.col-s-8 {width: 66.66%;}
+.col-s-9 {width: 75%;}
+.col-s-10 {width: 83.33%;}
+.col-s-11 {width: 91.66%;}
+.col-s-12 {width: 100%;}    
+}
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+* {
+  box-sizing: border-box;
+  }
+  /* Float four columns side by side */
+  .column {
+  float: left;
+  width: 50%;
+  padding: 0 10px;
+}
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+.column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+}
+}
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color:aliceblue;
+  cursor: pointer;
+  width: 100%;
+  position: relative;
+}
+.card, text {
+  text-align: center;
+  position: relative;
+}
+.card, img {
+  width: 100%;
+}
+.card .btn:hover {
+  opacity: 0.8;
+  background-color: black;
+  color: white;
+}
+/* Google Map API */
+#map {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.controls {
+  background-color: #fff;
+  border-radius: 2px;
+  border: 1px solid transparent;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  height: 29px;
+  margin-left: 17px;
+  margin-top: 10px;
+  outline: none;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 400px;
+}
+
+.controls:focus {
+  border-color: #4d90fe;
+}
+
+.title {
+  font-weight: bold;
+}
+
+#infowindow-content {
+  display: none;
+}
+
+#map #infowindow-content {
+  display: inline;
+}
 /* END OF PAGE Footer */
 .footer {
   background: color #f1f1f1;
