--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,10 +26,10 @@ body {
 /* Hero image */
 /* Image was linked from: https://www.cntraveller.com/article/amber-list-countries */
 .hero-image {
-  background: url("https://i2.wp.com/handluggageonly.co.uk/wp-content/uploads/2017/05/seychelles-1415432.jpg") no-repeat center;
+  background: url("https://hub.wtm.com/wp-content/uploads/2020/06/Ultra-rich-travel-journey-and-its-post-COVID-future-Low-Res-1017x480@2x.png") no-repeat center;
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 750px;
   position: relative;
 }
 /* Hero image text styling */
@@ -38,10 +38,17 @@ body {
   font-size: 8em;
   position: relative;
 }
+.hero-text, h1 {
+  font-family: courier new;
+}
 .btn {
-  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   border: 1px solid black;
-  color: black;
+  color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -51,8 +58,8 @@ body {
   border-radius: 16px;
 }
 .list-group-item {
-  border: 1px solid green; /* Green border */
-  background-color: black; /* background */
+  border: 1px orange; /* Green border */
+  background-color: rgb(36, 33, 33); /* background */
   text-align: center;
   font-size: x-large;
   font-weight: blod;
@@ -114,7 +121,7 @@ div#map {min-height: 360px;
   /* Float four columns side by side */
   .column {
   float: left;
-  width: 50%;
+  width: 33%;
   padding: 0 10px;
 }
 /* Remove extra left and right margins, due to padding */
@@ -132,6 +139,24 @@ div#map {min-height: 360px;
     display: block;
     margin-bottom: 20px;
 }
+}
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+#myBtn:hover {
+  background-color: #555;
 }
 /* Style the counter cards */
 .card {
